--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    font-size: 3vw;
+}
+
 .highlight{
     text-align: center;
 }
@@ -10,11 +14,11 @@
 #profile_info{
     display: grid;
     grid-template-rows: 1fr 1fr;
-    height: 50px;
+    height: 15vw;
 }
 #profile_pic{
-    width: 50px;
-    height: 50px;
+    width: 15vw;
+    height: 15vw;
 }
 
 .thumbnail_grid{
@@ -51,8 +55,8 @@
 }
 
 .highlight_pic{
-    width: 35px;
-    height: 35px;
+    width: 10vw;
+    height: 10vw;
 
     margin-left: auto;
     margin-right: auto;
@@ -60,11 +64,11 @@
 
 #highlight_area{
     display: grid;
-    grid-template-columns: 45px 45px 1fr;
+    grid-template-columns: 12vw 12vw 1fr;
 }
 
 #id{
-    font-size: 18px;
+    font-size: 6vw;
     font-weight: 100;
 }
 
@@ -72,7 +76,7 @@ button{
     height: 80%;
     width: 95%;
 
-    font-size: 10px;
+    font-size: 3vw;
     background-color: white;
     border: solid gray 1px;
     border-radius: 3px;
@@ -82,7 +86,7 @@ button{
     display: grid;
     grid-template-columns: 4fr 7fr 5fr;
     height: 10vw;
-    min-height: 40px;
+    min-height: 10vw;
 
     border-bottom: solid gray 0.1px;
     margin-bottom: 3vw;
@@ -111,7 +115,7 @@ button{
     border:solid gray 1px;
     border-radius: 3px;
 
-    font-size: 10px;
+    font-size: 3vw;
     font-weight: 100;
 }
 
@@ -120,24 +124,25 @@ i{
 }
 
 #top i{
-    font-size: 14px;
+    font-size: 4vw;
 }
 
 #top div{
     text-align: center;
-    padding-top: 6px;
+    padding-top: 3vw;
 }
 
 #sub_icons{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 
+    margin-top: 2vw;
     text-align: center;
-    font-size: 15px;
+    font-size: 5vw;
 
-    height: 30px;
+    height: 8vw;
 }
 
 .selected{
-    border-bottom: solid gray 3px;
+    border-bottom: solid grey 3px;
 }
